Implemented a "-into" option to embed mrxvt into. Thanks to Bruno Deferrari <utizoc@gmail.com> for the patch.
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@132 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -133,6 +133,14 @@ manpages.
 .It Fl display Ns | Ns Fl d Ar displayname
 X display name, the X server to contact
 .
+.It Fl into Ar WinID
+If given an X window identifier,
+.Nm
+will reparent its top-level shell widget to that window.
+This is used to embed
+.Nm
+within other applications.
+.
 .It Fl geometry Ns | Ns Fl g Ar geometry
 geometry at startup
 .Op Cm geometry
