Made off focus fading and -ufbg work under Xft.
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@140 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -15,9 +15,10 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 	   Deferrari <utizoc@gmail.com> for the patch.
 	9. Fix buffer overflow. Thanks to Frederik Deweerdt <deweerdt@free.fr>
 	   for the patch.
+       10. Made -ufbg and -fade options work under Xft ;).
 
     * Enhancements:
-	1. Reduced memory footprint by roughly 0.5kb.
+	1. Reduced memory footprint by roughly 5kb.
 	2. Converted all source files to use the standard ts=8 for easier
 	   diffing / online viewing.
 
