Collect focus change events over a short time interval before processing them. Works around a bug in some window managers (e.g. fvwm-2.5.16).
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@141 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -21,6 +21,9 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 	1. Reduced memory footprint by roughly 5kb.
 	2. Converted all source files to use the standard ts=8 for easier
 	   diffing / online viewing.
+	3. Added a --focusDelay option to collect focus changes events over an
+	   interval. This is mainly to work around a bug in some window
+	   managers.
 
 Jimmy Zhou <jimmyzhou@users.sourceforge.net>
     * Bug Fixes:
