Minor fix in man page
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@159 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -682,7 +682,7 @@ or
 .
 .It Fl mtw Ar width
 The maximum width (in characters) of the displayed tabs. This can not be larger than 40. If you use Xft, then you might want to use the
-.Cp minVisibleTabs
+.Cm minVisibleTabs
 option instead.
 .Op Cm maxTabWidth
 .
