Fixed spell error in man page
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@160 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -113,7 +113,7 @@ which is the same as putting the lines
 .Vb
 Mrxvt.transparent:		True
 Mrxvt.shading:			85
-Mrxvt.transaprentTabbar:	False
+Mrxvt.transparentTabbar:	False
 .Ve
 in your
 .Pa ~/.mrxvtrc .
