--- a/ChangeLog
+++ b/ChangeLog
@@ -23,6 +23,10 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 	   of a different dimension).
        12. Exited tabs are now correctly held. Output from them is not lost
 	   even if they exit very quickly.
+       13. Rewrote the -ufbg and focus fading code completely. Now works
+	   correctly if tabs are switched on on unfocussed window, or if the
+	   bg is changed (via an escape sequence) from an inactive tab /
+	   unfocussed window.
 
     * Enhancements:
 	0. Really busy tabs (even with Xft+anti aliasing) no longer starves
