Removed round trip to server when allocing Xft colors. (Reduces protocol requests by about 750 on startup, which should speed things up on a slow connection).
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@170 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -27,6 +27,9 @@ Gautam Iyer <gi1242@users.sourceforge.net>
 	   correctly if tabs are switched on on unfocussed window, or if the
 	   bg is changed (via an escape sequence) from an inactive tab /
 	   unfocussed window.
+       14. Removed round trip to server when allocing Xft colors. (Reduces
+	   protocol requests by about 750 on startup, which should speed
+	   things up on a slow connection).
 
     * Enhancements:
 	0. Really busy tabs (even with Xft+anti aliasing) no longer starves
