1. Defined CURSOR_COLOR_IS_RENDITION_COLOR by default in src/feature.h. This    makes the cursor better visible when the cursor color is not defined, and    makes the behaviour similar to the default behaviour of Xterm. 2. Added a "%p" option to macro arguments. %p expands to the PID of the process    in the active tab. Useful for use with dtach, or for a menu to send this    process SIGCONT / SIGKILL / etc. 3. BugFix: Use pixColorsFocus when initializing all windows. pixColors might    point to pixColorsUnfocus, resulting in "faded" backgrounds for tab / scroll    bar.
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@175 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/ChangeLog
+++ b/ChangeLog
@@ -30,6 +30,10 @@ Gautam Iyer <gi1242@users.sourceforge.net>
        14. Removed round trip to server when allocing Xft colors. (Reduces
 	   protocol requests by about 750 on startup, which should speed
 	   things up on a slow connection).
+       15. Defined CURSOR_COLOR_IS_RENDITION_COLOR by default in
+	   src/feature.h. This makes the cursor better visible when the cursor
+	   color is not defined, and makes the behaviour similar to the
+	   default behaviour of Xterm.
 
     * Enhancements:
 	0. Really busy tabs (even with Xft+anti aliasing) no longer starves
