Added Frederick to AUTHORS
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@184 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,6 +1,6 @@
 Current maintainer
 Terminator <jimmyzhou@users.sourceforge.net>
-Gautam Iyer <gautam@math.uchicago.edu>
+Gautam Iyer <gi1242@users.sourceforge.net>
 
 RedHat RPM package maintainer
 Neil Zanella <nzanella@users.sourceforge.net>
@@ -61,3 +61,4 @@ Copyright (c) 2005        Jingyu Zhou <jzhou@cs.ucsb.edu>
 Copyright (c) 2005        Gautam Iyer <gautam@math.uchicago.edu>
 Copyright (c) 2005        Mark Olesen <Mark.Olesen@gmx.net>
 Copyright (c) 2006        Yoshihiko Kashio <ykash@users.sourceforge.net>
+Copyright (c) 2006	  Frederik Deweerdt <fdeweerdt@users.sourceforge.net>
