1. Fixed integer overflow 2. Changed default skipPages to 25.
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@188 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/doc/mrxvt.1
+++ b/doc/mrxvt.1
@@ -1128,7 +1128,7 @@ option, then
 .Nm
 will refresh the screen every
 .Ar N
-pages of output. The default is 10. If you set it to a very large value (say LONG_MAX), then
+pages of output. The default is 25. If you set it to a very large value (say INT_MAX), then
 .Nm
 will refresh the screen only after the tab has stopped
 .Sq flat out
