Enabled keyword substitution in TODO. Added note about the double screen refresh bug.
git-svn-id: http://materm.svn.sourceforge.net/svnroot/materm/mrxvt05b@197 b659a89f-7713-0410-90e7-b53dc03aaadd

--- a/TODO
+++ b/TODO
@@ -61,6 +61,9 @@ Code Cleanup:
 				      BUGS
 
 9   vt100 printer support is now broken. Fix it.
+8   Looks like rvxt_scr_refresh is called twice every time. (The second refresh
+    is cheap, as the screen is current). But eliminating this will save a few
+    CPU cycles...
 8   When sending escape sequences to mrxvt via macros, make sure we are not
     disrupting processing of another escape sequence.
 1   PNG and JPEG background support on Solaris looks broken
@@ -141,4 +144,4 @@ That's it. Happy hacking
 --------------------------------------------------------------------------------
 
  Authors	: Jimmy Zhou, Gautam Iyer
- Last Changed	: Sun 17 Sep 2006 12:13:12 AM PDT
+ $LastChangedDate$
