--- a/TODO
+++ b/TODO
@@ -63,7 +63,7 @@ Code Cleanup:
 9   vt100 printer support is now broken. Fix it.
 8   Looks like rvxt_scr_refresh is called twice every time. (The second refresh
     is cheap, as the screen is current). But eliminating this will save a few
-    CPU cycles...
+    CPU cycles... NOTE: Only happens with -tr
 8   When sending escape sequences to mrxvt via macros, make sure we are not
     disrupting processing of another escape sequence.
 1   PNG and JPEG background support on Solaris looks broken
